--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,19 @@
 	<script src="wishy.js"></script>
 </head>
 <body ng-app = "wApp" ng-controller = "wCtrl">
-	<input ng-model="smile">
-	Naam hai {{smile}}
+	<div style="
+    max-width: 500px;
+    margin: auto;
+    margin-right: 50%;
+    margin-top: 10%;
+    border: 3px solid #73AD21;
+">
+		Wishy helps you collaborate online so as to wish your loved ones on their special days.
+		You just have to distribute the link and wishers can upload their wishes in text or video format.
+		Rest work is ours. We compile all your wishes and present it nicely in a link.
+
+		You just have to send the link to the special person on his/her special day. That's all.
+		This time, try a new way to wish. Let's get wishy!
+	</div>
 </body>
 </html>
