Developer Names Addition

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,10 @@
 	<script src="js/angular.min.js"></script>
 
 	<script src="wishy.js"></script>
+	<!--
+		Developers: Abhinaw Tiwari
+					P Panch Mukesh
+	-->
 </head>
 <body ng-app = "wApp" ng-controller = "wCtrl">
 	<div style="
