University name addition

--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
 	<!--
 		Developers: Abhinaw Tiwari
 					P Panch Mukesh
+		Veer Surendra Sai University of Technology, Burla
 	-->
 </head>
 <body ng-app = "wApp" ng-controller = "wCtrl">
