Adding comment to learn bash way of commit

--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,6 @@
 		You just have to send the link to the special person on his/her special day. That's all.
 		This time, try a new way to wish. Let's get wishy!
 	</div>
-	<!-- Checking commit. -->
+	<!-- Checking commit again. -->
 </body>
 </html>
